--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,17 +5,13 @@
            id="taotao" version="2.5">
     <display-name>HelloWorld</display-name>
     <welcome-file-list>
-      <welcome-file>index.html</welcome-file>
-      <welcome-file>index.htm</welcome-file>
-      <welcome-file>index.jsp</welcome-file>
-      <welcome-file>default.html</welcome-file>
-      <welcome-file>default.htm</welcome-file>
-      <welcome-file>default.jsp</welcome-file>
+      <welcome-file>index</welcome-file>
     </welcome-file-list>
+
     <!-- 初始化spring容器 -->
     <context-param>
       <param-name>contextConfigLocation</param-name>
-      <param-value>classpath:spring/applicationContext-*.xml</param-value>
+      <param-value>classpath:spring/applicationContext*.xml</param-value>
     </context-param>
 
     <context-param>
@@ -40,10 +36,29 @@
       <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+  <!--http请求记录器-->
+  <filter>
+    <filter-name>HttpRequestFilter</filter-name>
+    <filter-class>com.chen.filter.HttpRequestFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>HttpRequestFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+
+  <!--xss 和sql过滤-->
+  <filter>
+    <filter-name>XssAndSqlFilter</filter-name>
+    <filter-class>com.chen.filter.XssAndSqlFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>XssAndSqlFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
 
     <!-- springmvc的前端控制器 -->
     <servlet>
-      <servlet-name>taotao-manager</servlet-name>
+      <servlet-name>HelloWorld</servlet-name>
       <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
       <!-- contextConfigLocation不是必须的， 如果不配置contextConfigLocation， springmvc的配置文件默认在：WEB-INF/servlet的name+"-servlet.xml" -->
       <init-param>
@@ -53,8 +68,14 @@
       <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet-mapping>
-      <servlet-name>taotao-manager</servlet-name>
+      <servlet-name>HelloWorld</servlet-name>
       <url-pattern>/</url-pattern>
     </servlet-mapping>
+
+  <!--配置mime类型-->
+  <mime-mapping>
+    <extension>jsp</extension>
+    <mime-type>text/html;charset=UTF-8</mime-type>
+  </mime-mapping>
   </web-app>
 
